fixed price overflow by changing title-size variable

--- a/style.css
+++ b/style.css
@@ -603,7 +603,7 @@ html::-webkit-scrollbar {
     /* font size */
     /* the math behind: [minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
     --txt-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1500 - 300)));
-    --title-size: calc(30px + (60 - 30) * ((100vw - 300px) / (1500 - 300)));
+    --title-size: calc(37px + (40 - 37) * ((100vw - 300px) / (1500 - 300)));
     --subtitle-size: calc(20px + (35 - 20) * ((100vw - 300px) / (1500 - 300)));
     --txt-small: calc(12px + (16 - 12) * ((100vw - 300px) / (1500 - 300)));
     --txt-big: calc(50px + (80 - 50) * ((100vw - 300px) / (1500 - 300)));
